# pylitegame

./: License  README.md  pyproject.toml
pylitegame/: _init__.py
pylitegame.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pylitegame_project/: _init_.py  core.py
