[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylitegame"
version = "0.1.1"
description = "A lightweight and beginner-friendly wrapper for pygame."
readme = "README.md"
requires-python = ">=3.8,<3.14"
license = {text = "MIT"}
authors = [
    { name = "꾸뇽" }
]
dependencies = [
    "pygame>=2.0.0"
]

keywords = ["pygame", "game", "2d", "education", "beginner", "wrapper"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Education",
    "Intended Audience :: Education",
]

[project.urls]
Homepage = "https://github.com/tobyzzang100-eng/pylitegame"